# PyperWeb

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  test.db
flaskapp/: __init__.py  constants.py  forms.py  models.py  routes.py
flaskapp/APIS/ARXIV/: ArxivClasses.py
flaskapp/APIS/HEP/: HepClasses.py
flaskapp/APIS/MULTI/: MultiClasses.py
flaskapp/APIS/PUBMED/: PubmedClasses.py  articles.json  articles.txt  pubmed.json  search.json
flaskapp/static/: test.css
flaskapp/templates/: about.html  article.html  base.html  error.html  index.html  search_results.html
